# relgauge

./: README.md  README_algebraaudit_patch.md  README_approxequalizer_patch.md  README_attractoraudit_patch.md  README_basininvariantaudit_patch.md  README_blind_observer_section_dynamics.md  README_blind_section_dynamics.md  README_blind_section_dynamics_v2_gate.md  README_blindselection_patch.md  README_blindselection_v3_exact_two_stage.md  README_commonfactoraudit_patch.md  README_diamond_patch.md  README_finiteobserver_patch.md  README_interfaceequalizer_patch.md  README_observer_connection_automorphism_v3.md  README_observer_connection_certification.md  README_observer_frame_bundle_v4.md  README_observer_hidden_memory.md  README_observer_section_dynamics_patch.md  README_observer_section_dynamics_v2.md  README_observer_visible_period_audit.md  README_observer_visible_quotient.md  README_phasechannel_patch.md  README_recursivefluxaudit_patch.md  README_scdcdiamond_patch.md  README_temporalchain_patch.md  example_config.json  loop_holonomy_q4_w1.csv  loop_holonomy_q4_w1_summary.json  pyproject.toml  seeded_temporal_recovery_q4_w1_saved_summary.json  seeded_temporal_recovery_q4_w2_summary.json  seeded_temporal_winners_q4_w1.pkl  shared_square_holonomy_q4_w1.csv  shared_square_holonomy_q4_w1_summary.json  square_holonomy_q4_w1.csv  square_holonomy_q4_w1_summary.json  transport_algebra_q4_w1.csv  transport_algebra_q4_w1_summary.json
example_results/: aggregated.csv  approx_equalizer_smoke.csv  approx_equalizer_smoke_summary.json  attractor_audit_q4_full.csv  (+135 more)
(+95 files in other folders)
