[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "relgauge"
version = "0.1.0"
description = "Schedule-gauge resolvability experiments in finite relational systems"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "matplotlib"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["relgauge*"]
